# controllers/users.js
@@ -1,82 +1,0 @@
-const mongodb = require('../data/database');
-const objectId = require('mongodb').ObjectId;
-
-const getAll = async (req, res) => {
-    //#swagger.tags['Users']
-    // Fetch every user in the collection.
-    const result = await mongodb.getDatabase().db().collection('users').find();
-    result.toArray().then((users) => {
-        res.setHeader('Content-Type', 'application/json');
-        res.status(200).json(users);
-    });
-};
-const getSingle = async (req, res) => {
-    //#swagger.tags['Users']
-    // Fetch a single user by id.
-    const userId = new objectId(req.params.id);
-    const result = await mongodb.getDatabase().db().collection('users').find({ _id: userId });
-    result.toArray().then((users) => {
-        res.setHeader('Content-Type', 'application/json');
-        res.status(200).json(users);
-    });
-    };
-
-const createUser = async (req, res) => {
-    //#swagger.tags['Users']
-    // Build the new user from the request body.
-    const user = {
-        // firstName: req.body.firstName,
-        // lastName: req.body.lastName,
-        // email: req.body.email,
-        // favoriteColor: req.body.favoriteColor,
-        // birthday: req.body.birthday
-        email: req.body.email,
-        username: req.body.username,
-        name: req.body.name,
-        ipaddress: req.body.ipaddress
-    };
-    const response = await mongodb.getDatabase().db().collection('users').insertOne(user);
-    if (response.acknowledged) {
-        res.status(204).send();
-    }else {
-        res.status(500).json(response.error || 'Some error occurred while creating the user.');
-    }
-};
-
-const updateUser = async (req, res) => {
-    //#swagger.tags['Users']
-    // Replace an existing user with the submitted data.
-    const userId = new objectId(req.params.id);
-    const user = {
-        email: req.body.email,
-        username: req.body.username,
-        name: req.body.name,
-        ipaddress: req.body.ipaddress
-    };
-    const response = await mongodb.getDatabase().db().collection('users').replaceOne({ _id: userId }, user);
-    if (response.modifiedCount > 0) {
-        res.status(204).send();
-    }else {
-        res.status(500).json(response.error || 'Some error occurred while updating the user.');
-    }
-};
-
-const deleteUser = async (req, res) => {
-    //#swagger.tags['Users']
-    // Remove a single user by id.
-    const userId = new objectId(req.params.id);
-    const response = await mongodb.getDatabase().db().collection('users').deleteOne({ _id: userId });
-    if (response.deletedCount > 0) {
-        res.status(204).send();
-    }    else {
-        res.status(500).json(response.error || 'Some error occurred while deleting the user.');
-    }
-};
-
-module.exports = {
-    getAll,
-    getSingle,
-    createUser,
-    updateUser,
-    deleteUser
-};
